<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_control</name>
  <version>1.5.0</version>
  <description>ROS2 packages used to start the hardware interface as well as the controllers.</description>
  <maintainer email="davide.nardi-1@unitn.it">Davide Nardi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>lbr_description</exec_depend>
  <exec_depend>lbr_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>